CSS in datafetch js is fixed.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="home-content">
       <section class="left-side">
         <h1 class="text large-text-block text-glow">
           <span class="text-gradient">statistics gradient</span><br />
