--- a/population_statistics.html
+++ b/population_statistics.html
@@ -19,9 +19,9 @@
     <header>
       <nav>
         <ul class="menu">
-          <li><a href="#" class="logo">LOGO</a></li>
+          <li><a href="index.html" class="logo">LOGO</a></li>
           <li>
-            <a class="btn btn-medium btn-semi-transparent btn-glow" href="#"
+            <a class="btn btn-medium btn-semi-transparent btn-glow" href="population_statistics.html"
               >USA population statistics</a
             >
           </li>
@@ -29,7 +29,7 @@
       </nav>
     </header>
 
-    <section class="population-statistics"></section>
+    <section class="population-statistics data-table"></section>
 
     <footer></footer>
     <script src="datafetch.js"></script>
