--- a/population_statistics.html
+++ b/population_statistics.html
@@ -7,6 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@200;500&family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
@@ -31,7 +45,88 @@
 
     <section class="population-statistics data-table"></section>
 
-    <footer></footer>
+    <footer>
+      <section class="container bg-white p-3" style="--bs-bg-opacity: .1;">
+        <section class="row">
+          <section class="col-lg-3 col-md-6">
+            <p class="text x-small-text-block text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt.
+            </p>
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="twitter"
+                  ><i class="fa fa-twitter"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="facebook"
+                  ><i class="fa fa-facebook"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="instagram"
+                  ><i class="fa fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="pinterest"
+                  ><i class="fa fa-pinterest"></i
+                ></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="vimeo"
+                  ><i class="fa fa-vimeo"></i
+                ></a>
+              </li>
+            </ul>
+          </section>
+  
+          <section class="col-lg-3 col-md-6">
+            <h6 class="text-uppercase font-weight-bold mb-4">Shop</h6>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#" target="_blank" class="text-muted">Women</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" class="text-muted">Men</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" class="text-muted">Unisex</a>
+              </li>
+            </ul>
+          </section>
+  
+          <section class="col-lg-3 col-md-6">
+            <h6 class="text-uppercase font-weight-bold mb-4">Company</h6>
+            <ul class="list-unstyled">
+              <li>
+                <a href="#" target="_blank" class="text-muted">Contact Us</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" class="text-muted">Information</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" class="text-muted">News</a>
+              </li>
+            </ul>
+          </section>
+  
+          <section class="col-lg-3 col-md-6">
+            <h6 class="text-uppercase font-weight-bold mb-4">Newsletter</h6>
+            <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>
+            <div class="p-1 rounded border">
+              <div class="input-group">
+                <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">
+                <div class="input-group-append">
+                  <button type="submit" class="button btn-medium btn-semi-transparent"><i class="fa fa-paper-plane"></i></button>
+                </div>
+              </div>
+          </section>
+        </section>
+      </section>
+    </footer>
+
     <script src="datafetch.js"></script>
   </body>
 </html>
