change section to div

--- a/population_statistics.html
+++ b/population_statistics.html
@@ -46,8 +46,8 @@
     <section class="population-statistics data-table"></section>
 
     <footer>
-      <section class="container bg-white p-3" style="--bs-bg-opacity: .1;">
-        <section class="row">
+      <div class="container bg-white p-3" style="--bs-bg-opacity: .1;">
+        <div class="row">
           <section class="col-lg-3 col-md-6">
             <p class="text x-small-text-block text-muted">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -123,8 +123,8 @@
                 </div>
               </div>
           </section>
-        </section>
-      </section>
+        </div>
+      </div>
     </footer>
 
     <script src="datafetch.js"></script>
