--- a/population_statistics.html
+++ b/population_statistics.html
@@ -43,6 +43,15 @@
       </nav>
     </header>
 
+    <section class="statistics-menu bg-black">
+      <ul>
+        <p class="text x-small-text-block text-muted">Sort option:</p>
+        <li><a class="btn btn-small btn-semi-transparent" onclick="sortByYear()">Sort by year</a></li>
+        <li><a class="btn btn-small btn-semi-transparent" onclick="sortByPopulation()">Sort by population</a></li>
+        <li><a class="btn btn-small btn-semi-transparent" onclick="sortByState()">Sort by state</a></li>
+      </ul>
+    </section>
+
     <section class="population-statistics data-table"></section>
 
     <footer>
@@ -128,5 +137,6 @@
     </footer>
 
     <script src="datafetch.js"></script>
+    
   </body>
 </html>
