animation on index site

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
           <section class="col-lg-6 col-md-6">
            
-            <h1 class="text large-text-block text-glow">
+            <h1 class="text large-text-block">
               <span class="text-gradient">statistics gradient</span><br />
                with Glow effect .
             </h1>
