add services in index site

--- a/index.html
+++ b/index.html
@@ -75,6 +75,34 @@
       </div>
     </main>
 
+    <div class="container services">
+      <div class="row">
+        <section class="service col-lg-4 col-md-4">
+          <img src="img_1.png" width="360px" alt="">
+          <h1 class="text-uppercase text text-center">Databases</h1>
+          <p class="text x-small-text-block">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+        </section>
+
+        <section class="service col-lg-4 col-md-4">
+          <img src="img_2.jpg" width="360px" alt="">
+          <h1 class="text-uppercase text text-center">Server</h1>
+          <p class="text x-small-text-block">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+        </section>
+
+        <section class="service col-lg-4 col-md-4">
+          <img src="img_3.jpg" width="360px" alt="">
+          <h1 class="text-uppercase text text-center">Cloud computnig</h1>
+          <p class="text x-small-text-block">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+        </section>
+      </div>
+    </div>
+
     <footer>
       <div class="container bg-white p-3" style="--bs-bg-opacity: .1;">
         <div class="row">
