--- a/index.html
+++ b/index.html
@@ -78,24 +78,24 @@
     <div class="container services">
       <div class="row">
         <section class="service col-lg-4 col-md-4">
-          <img src="img_1.png" width="360px" alt="">
-          <h1 class="text-uppercase text text-center">Databases</h1>
+          <img src="img_1.png" alt="">
+          <h1 class="text-uppercase text">Databases</h1>
           <p class="text x-small-text-block">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </p>
         </section>
 
         <section class="service col-lg-4 col-md-4">
-          <img src="img_2.jpg" width="360px" alt="">
-          <h1 class="text-uppercase text text-center">Server</h1>
+          <img src="img_2.jpg" alt="">
+          <h1 class="text-uppercase text">Server</h1>
           <p class="text x-small-text-block">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </p>
         </section>
 
         <section class="service col-lg-4 col-md-4">
-          <img src="img_3.jpg" width="360px" alt="">
-          <h1 class="text-uppercase text text-center">Cloud computnig</h1>
+          <img src="img_3.jpg" alt="">
+          <h1 class="text-uppercase text">Cloud computnig</h1>
           <p class="text x-small-text-block">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </p>
