--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
               minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat.
             </p>
+
+            <a class="btn btn-large btn-semi-transparent">More Information</a>
+
           </section>
       
           <section class="col-lg-6 col-md-6">
