fix index button and services section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               aliquip ex ea commodo consequat.
             </p>
 
-            <a class="btn btn-large btn-semi-transparent">More Information</a>
+            <a class="btn btn-x-large btn-glow btn-gradient-border">More Information</a>
 
           </section>
       
@@ -77,6 +77,8 @@
         </div>
       </div>
     </main>
+    
+    <h1 class="text large-text-block section-title">Services</h1>
 
     <div class="container services">
       <div class="row">
