add icon CSS style and landing page section "section class"

--- a/index.html
+++ b/index.html
@@ -77,96 +77,102 @@
       </div>
     </main>
 
-    <div class="container services">
-      <h1 class="text large-text-block section-title">Services</h1>
-      <div class="row">
-        <section class="service col-lg-4 col-md-4">
-          <img src="img_1.png" alt="" />
-          <h1 class="text-uppercase text">Databases</h1>
-          <p class="text x-small-text-block">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </section>
+    <div class="section">
+      <div class="container">
+        <h1 class="text large-text-block section-title">Services</h1>
+        <div class="row">
+          <section class="service col-lg-4 col-md-4">
+            <img src="img_1.png" alt="" />
+            <h1 class="text-uppercase text">Databases</h1>
+            <p class="text x-small-text-block">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </section>
 
-        <section class="service col-lg-4 col-md-4">
-          <img src="img_2.jpg" alt="" />
-          <h1 class="text-uppercase text">Server</h1>
-          <p class="text x-small-text-block">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </section>
+          <section class="service col-lg-4 col-md-4">
+            <img src="img_2.jpg" alt="" />
+            <h1 class="text-uppercase text">Server</h1>
+            <p class="text x-small-text-block">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </section>
 
-        <section class="service col-lg-4 col-md-4">
-          <img src="img_3.jpg" alt="" />
-          <h1 class="text-uppercase text">Cloud computnig</h1>
-          <p class="text x-small-text-block">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </section>
-      </div>
-      <h2 class="text medium-text-block section-subtitle">
-        We use technologies:
-      </h2>
-      <div class="row">
-        <div class="col icon-section">
-          <span class="icon" style="font-size: 120px; color: rgb(111, 76, 255)">
-            <i class="fab fa-github"></i>
-          </span>
-          <span class="icon" style="font-size: 120px; color: rgb(111, 76, 255)">
-            <i class="fas fa-database"></i>
-          </span>
-          <span class="icon" style="font-size: 120px; color: rgb(111, 76, 255)">
-            <i class="fab fa-windows"></i>
-          </span>
+          <section class="service col-lg-4 col-md-4">
+            <img src="img_3.jpg" alt="" />
+            <h1 class="text-uppercase text">Cloud computnig</h1>
+            <p class="text x-small-text-block">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </section>
+        </div>
+        <h2 class="text medium-text-block section-subtitle">
+          We use technologies:
+        </h2>
+        <div class="row">
+          <div class="col icon-section">
+            <span class="icon">
+              <i class="fab fa-github"></i>
+              <p class="text">GitHub</p>
+            </span>
+            <span class="icon">
+              <i class="fas fa-database"></i>
+              <p class="text">SQL Server</p>
+            </span>
+            <span class="icon">
+              <i class="fab fa-windows"></i>
+              <p class="text">Windows</p>
+            </span>
+          </div>
         </div>
       </div>
     </div>
 
-    <h1 class="text large-text-block section-title">Next Section</h1>
+    <div class="section">
+      <div class="container">
+        <h1 class="text large-text-block section-title">Next Section</h1>
+        <div class="row">
+          <section class="service col-lg-4 col-md-4">
+            <img src="img_1.png" alt="" />
+            <h1 class="text-uppercase text">Databases</h1>
+            <p class="text x-small-text-block">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </section>
 
-    <div class="container services">
-      <div class="row">
-        <section class="service col-lg-4 col-md-4">
-          <img src="img_1.png" alt="" />
-          <h1 class="text-uppercase text">Databases</h1>
-          <p class="text x-small-text-block">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </section>
+          <section class="service col-lg-4 col-md-4">
+            <img src="img_2.jpg" alt="" />
+            <h1 class="text-uppercase text">Server</h1>
+            <p class="text x-small-text-block">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </section>
 
-        <section class="service col-lg-4 col-md-4">
-          <img src="img_2.jpg" alt="" />
-          <h1 class="text-uppercase text">Server</h1>
-          <p class="text x-small-text-block">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </section>
-
-        <section class="service col-lg-4 col-md-4">
-          <img src="img_3.jpg" alt="" />
-          <h1 class="text-uppercase text">Cloud computnig</h1>
-          <p class="text x-small-text-block">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </section>
+          <section class="service col-lg-4 col-md-4">
+            <img src="img_3.jpg" alt="" />
+            <h1 class="text-uppercase text">Cloud computnig</h1>
+            <p class="text x-small-text-block">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+          </section>
+        </div>
       </div>
     </div>
 
