add slider with bootstrap vwvh100

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -172,6 +177,31 @@
               nisi ut aliquip ex ea commodo consequat.
             </p>
           </section>
+        </div>
+      </div>
+    </div>
+
+    <div class="section">
+      <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="slider carousel-inner">
+          <div class="carousel-item active">
+            <img src="winter_nature_background_blue_sky_snow_covered_trees_hd_winter.jpg" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Slide 1</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="winter_scenery_snow_covered_trees_sunlight_reflection_hd_winter.jpg" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Slide 2</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="winter_snow_covered_trees_path_under_blue_sky_during_sunny_day_hd_winter.jpg" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Slide 3</h5>
+            </div>
+          </div>
         </div>
       </div>
     </div>
