--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <body>
     <header>
       <nav>
-        <ul class="menu">
+        <ul class="navbar">
           <li><a href="index.html" class="logo">LOGO</a></li>
           <li>
             <a
@@ -50,7 +50,7 @@
       </nav>
     </header>
 
-    <main class="home-content">
+    <main class="hero">
       <div class="container">
         <div class="row">
           <section class="col-lg-6 col-md-6">
