navbar position fixed + hero postion fixed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li><a href="index.html" class="logo">LOGO</a></li>
           <li>
             <a
-              class="btn btn-medium btn-semi-transparent btn-glow"
+              class="btn btn-medium btn-glow"
               href="population_statistics.html"
               >USA population statistics</a
             >
