fix button. Add "btn-round"

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           navbar.style.color = "#FFF";
           navbar_btn.classList.add("btn");
           navbar_btn.classList.add("btn-s");
-          navbar.btn.classList.add("btn-round");
+          navbar_btn.classList.add("btn-round");
           navbar_btn.classList.add("btn-glow");
         }
       }
