--- a/population_statistics.html
+++ b/population_statistics.html
@@ -24,18 +24,29 @@
       href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@200;500&family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="data.css">
+    
+    <link rel="stylesheet" href="microbase-css/microbase.elements.css" />
+    <link rel="stylesheet" href="data.css" />
+    <script src="main.js"></script>
     <title>Population Statistics USA - Tomasz Dudkowski</title>
   </head>
 
   <body>
+
+    <script>
+      window.onscroll = function () {
+        scrollFunction();
+      };
+    </script>
+
     <header>
       <nav>
-        <ul class="menu">
+        <ul id="navbar" class="navbar">
           <li><a href="index.html" class="logo">LOGO</a></li>
           <li>
-            <a class="btn btn-medium btn-semi-transparent btn-glow" href="population_statistics.html"
+            <a id="navbar-btn" class="btn btn-s btn-round btn-glow" href="population_statistics.html"
               >USA population statistics</a
             >
           </li>
