--- a/population_statistics.html
+++ b/population_statistics.html
@@ -65,8 +65,8 @@
 
     <section class="population-statistics data-table"></section>
 
-    <footer>
-      <div class="container bg-white p-3" style="--bs-bg-opacity: .1;">
+    <footer class="bg-white" style="--bs-bg-opacity: 0.1">
+      <div class="container p-3">
         <div class="row">
           <section class="col-lg-3 col-md-6">
             <p class="text x-small-text-block text-muted">
