fix sort menu style

--- a/population_statistics.html
+++ b/population_statistics.html
@@ -54,12 +54,12 @@
       </nav>
     </header>
  
-<section class="statistics-menu bg-black">
+<section class="statistics-menu">
       <ul>
-        <p class="text x-small-text-block text-muted">Sort option:</p>
-        <li><a class="btn btn-small btn-semi-transparent" onclick="sortByYear()">Sort by year</a></li>
-        <li><a class="btn btn-small btn-semi-transparent" onclick="sortByState()">Sort by state</a></li>
-        <li><a class="btn btn-small btn-semi-transparent" onclick="sortByPopulation()">Sort by population</a></li>
+        <p class="small-text text-muted">Sort option:</p>
+        <li><a class="btn btn-s btn-dark btn-semi-round" onclick="sortByYear()">Sort by year</a></li>
+        <li><a class="btn btn-s btn-dark btn-semi-round" onclick="sortByState()">Sort by state</a></li>
+        <li><a class="btn btn-s btn-dark btn-semi-round" onclick="sortByPopulation()">Sort by population</a></li>
       </ul>
     </section>
 
