Add media query

--- a/index.html
+++ b/index.html
@@ -60,27 +60,29 @@
       <div class="container">
         <div class="row">
           <section class="col-lg-6 col-md-6">
-            <h1 class="text large-text-block">
+            <h1 class="large-text">
               <span class="text-gradient">statistics gradient</span><br />
               with Glow effect .
             </h1>
 
-            <p class="text small-text-block">
+            <p class="small-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
               enim ad minim veniam, quis nostrud exercitation ullamco laboris
               nisi ut aliquip ex ea commodo consequat.
             </p>
 
-            <a class="btn btn-x-large btn-glow btn-gradient-border"
+            <div class="center">
+              <a class="btn btn-m btn-light btn-glow"
               >More Information</a
             >
+            </div>
+            
           </section>
 
           <section class="col-lg-6 col-md-6">
             <img
               class="right-side-image"
-              width="40px"
               src="services-web-design.png"
               alt=""
             />
