--- a/population_statistics.html
+++ b/population_statistics.html
@@ -7,11 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@200;500&family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -20,15 +23,16 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@200;500&family=Montserrat:wght@500&display=swap"
-      rel="stylesheet"
-    />
-
     <link rel="stylesheet" href="style.css" />
-    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="microbase-css/microbase.elements.css" />
-    <link rel="stylesheet" href="data.css" />
+    <link rel="stylesheet" href="data.css">
+
     <script src="main.js"></script>
     <title>Population Statistics USA - Tomasz Dudkowski</title>
   </head>
@@ -36,21 +40,40 @@
   <body>
 
     <script>
-      window.onscroll = function () {
+      window.onscroll = () => {
         scrollFunction();
       };
     </script>
 
     <header>
-      <nav>
-        <ul id="navbar" class="navbar">
-          <li><a href="index.html" class="logo">LOGO</a></li>
-          <li>
-            <a id="navbar-btn" class="btn btn-s btn-round btn-glow" href="population_statistics.html"
-              >USA population statistics</a
-            >
-          </li>
-        </ul>
+      <nav id="navbarh" class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+          <a href="index.html" class="logo navbar-brand">LOGO</a>
+          <button
+            id="toggler-button"
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a
+                  id="navbar-btn"
+                  class="btn btn-s btn-round btn-glow"
+                  href="population_statistics.html"
+                  >USA population statistics</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
  
@@ -150,4 +173,15 @@
     <script src="datafetch.js"></script>
     
   </body>
+
+  <script>
+    const collapse_menu = document.getElementById("toggler-button");
+
+    window.onload = () => {
+      collapse_menu.onclick = () => {
+        collapseMenu();
+      };
+    };
+  </script>
+
 </html>
