--- a/index.html
+++ b/index.html
@@ -32,42 +32,33 @@
     />
     <link rel="stylesheet" href="microbase-css/microbase.elements.css" />
 
-    <script src="main.js"></script>
     <title>Home Page - Tomasz Dudkowski</title>
   </head>
 
   <body>
-    <script>
-      window.onscroll = () => {
-        scrollFunction();
-      };
-    </script>
 
     <header>
-      <nav id="navbarh" class="navbar navbar-expand-lg navbar-dark">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a href="index.html" class="logo navbar-brand">LOGO</a>
           <button
-            id="toggler-button"
             class="navbar-toggler"
             type="button"
             data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
+            data-bs-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03"
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
               <li class="nav-item">
-                <a
-                  id="navbar-btn"
-                  class="btn btn-s btn-round btn-glow"
-                  href="population_statistics.html"
-                  >USA population statistics</a
-                >
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
               </li>
             </ul>
           </div>
@@ -338,13 +329,4 @@
     </footer>
   </body>
 
-  <script>
-    const collapse_menu = document.getElementById("toggler-button");
-
-    window.onload = () => {
-      collapse_menu.onclick = () => {
-        collapseMenu();
-      };
-    };
-  </script>
 </html>
