--- a/population_statistics.html
+++ b/population_statistics.html
@@ -23,13 +23,14 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="microbase-css/microbase.elements.css" />
     <link rel="stylesheet" href="data.css">
 
@@ -40,7 +41,7 @@
   <body>
 
     <header>
-      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <button
             class="navbar-toggler"
@@ -57,10 +58,12 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link btn btn-s btn-round active" aria-current="page" href="index.html"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link btn btn-s btn-round" href="population_statistics.html">USA Statistics</a>
               </li>
             </ul>
           </div>
