--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
+    /><link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="microbase-css/microbase.elements.css" />
 
     <title>Home Page - Tomasz Dudkowski</title>
@@ -55,12 +54,12 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
               <li class="nav-item">
-                <a class="nav-link btn btn-xs btn-round active" aria-current="page" href="index.html"
+                <a class="nav-link active" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link btn btn-xs btn-round" href="population_statistics.html">USA Statistics</a>
+                <a class="nav-link" href="population_statistics.html">USA Statistics</a>
               </li>
             </ul>
           </div>
