--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css"
     />
-    
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    /><link rel="stylesheet" href="style.css" />
+    />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="microbase-css/microbase.elements.css" />
 
     <title>Home Page - Tomasz Dudkowski</title>
@@ -37,7 +38,7 @@
 
   <body>
     <header>
-      <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar sticky navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <button
             class="navbar-toggler"
@@ -59,7 +60,9 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="population_statistics.html">USA Statistics</a>
+                <a class="nav-link" href="population_statistics.html"
+                  >USA Statistics</a
+                >
               </li>
             </ul>
           </div>
@@ -84,19 +87,18 @@
             </p>
 
             <div class="center">
-              <a class="btn btn-m btn-light btn-glow"
-              >More Information</a
-            >
+              <a class="btn btn-m btn-light btn-glow">More Information</a>
             </div>
-            
           </section>
 
           <section class="col-lg-6 col-md-6">
-            <img
-              class="right-side-image"
-              src="services-web-design.png"
-              alt=""
-            />
+            <div class="center">
+              <img
+                class="right-side-image"
+                src="services-web-design.png"
+                alt=""
+              />
+            </div>
           </section>
         </div>
       </div>
