--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    /><link rel="stylesheet" href="style.css" />
+    />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="microbase-css/microbase.elements.css" />
+    <link rel="stylesheet" href="data.css">
 
-    <title>Home Page - Tomasz Dudkowski</title>
+    
+    <title>Population Statistics USA - Tomasz Dudkowski</title>
   </head>
 
   <body>
+
     <header>
       <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -54,184 +58,29 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link btn btn-s btn-round active" aria-current="page" href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="population_statistics.html">USA Statistics</a>
+                <a class="nav-link btn btn-s btn-round" href="population_statistics.html">USA Statistics</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
+ 
+<section class="statistics-menu">
+      <ul>
+        <p class="small-text text-muted">Sort option:</p>
+        <li><a class="btn btn-s btn-dark btn-semi-round" onclick="sortByYear()">Sort by year</a></li>
+        <li><a class="btn btn-s btn-dark btn-semi-round" onclick="sortByState()">Sort by state</a></li>
+        <li><a class="btn btn-s btn-dark btn-semi-round" onclick="sortByPopulation()">Sort by population</a></li>
+      </ul>
+    </section>
 
-    <main class="hero">
-      <div class="container">
-        <div class="row">
-          <section class="col-lg-6 col-md-6">
-            <h1 class="text large-text-block">
-              <span class="text-gradient">statistics gradient</span><br />
-              with Glow effect .
-            </h1>
-
-            <p class="text small-text-block">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-
-            <a class="btn btn-x-large btn-glow btn-gradient-border"
-              >More Information</a
-            >
-          </section>
-
-          <section class="col-lg-6 col-md-6">
-            <img
-              class="right-side-image"
-              width="40px"
-              src="services-web-design.png"
-              alt=""
-            />
-          </section>
-        </div>
-      </div>
-    </main>
-
-    <div class="section">
-      <div class="container">
-        <h1 class="text large-text-block section-title">Services</h1>
-        <div class="row">
-          <section class="service col-lg-4 col-md-4">
-            <img src="img_1.png" alt="" />
-            <h1 class="text-uppercase text">Databases</h1>
-            <p class="text x-small-text-block">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-
-          <section class="service col-lg-4 col-md-4">
-            <img src="img_2.jpg" alt="" />
-            <h1 class="text-uppercase text">Server</h1>
-            <p class="text x-small-text-block">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-
-          <section class="service col-lg-4 col-md-4">
-            <img src="img_3.jpg" alt="" />
-            <h1 class="text-uppercase text">Cloud computnig</h1>
-            <p class="text x-small-text-block">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-        </div>
-        <h2 class="text medium-text-block section-subtitle">
-          We use technologies:
-        </h2>
-        <div class="row">
-          <div class="col icon-section">
-            <span class="icon">
-              <i class="fab fa-github"></i>
-              <p class="text">GitHub</p>
-            </span>
-            <span class="icon">
-              <i class="fas fa-database"></i>
-              <p class="text">SQL Server</p>
-            </span>
-            <span class="icon">
-              <i class="fab fa-windows"></i>
-              <p class="text">Windows</p>
-            </span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="section">
-      <div class="container">
-        <h1 class="text large-text-block section-title">Next Section</h1>
-        <div class="row">
-          <section class="service col-lg-4 col-md-4">
-            <img src="img_1.png" alt="" />
-            <h1 class="text-uppercase text">Databases</h1>
-            <p class="text x-small-text-block">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-
-          <section class="service col-lg-4 col-md-4">
-            <img src="img_2.jpg" alt="" />
-            <h1 class="text-uppercase text">Server</h1>
-            <p class="text x-small-text-block">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-
-          <section class="service col-lg-4 col-md-4">
-            <img src="img_3.jpg" alt="" />
-            <h1 class="text-uppercase text">Cloud computnig</h1>
-            <p class="text x-small-text-block">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat.
-            </p>
-          </section>
-        </div>
-      </div>
-    </div>
-
-    <div class="section">
-      <div id="carousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="slider carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="winter_nature_background_blue_sky_snow_covered_trees_hd_winter.jpg"
-              alt="..."
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Slide 1</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="winter_scenery_snow_covered_trees_sunlight_reflection_hd_winter.jpg"
-              alt="..."
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Slide 2</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="winter_snow_covered_trees_path_under_blue_sky_during_sunny_day_hd_winter.jpg"
-              alt="..."
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Slide 3</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <section class="population-statistics data-table"></section>
 
     <footer class="bg-white" style="--bs-bg-opacity: 0.1">
       <div class="container p-3">
@@ -269,7 +118,7 @@
               </li>
             </ul>
           </section>
-
+  
           <section class="col-lg-3 col-md-6">
             <h6 class="text-uppercase font-weight-bold mb-4">Shop</h6>
             <ul class="list-unstyled">
@@ -284,7 +133,7 @@
               </li>
             </ul>
           </section>
-
+  
           <section class="col-lg-3 col-md-6">
             <h6 class="text-uppercase font-weight-bold mb-4">Company</h6>
             <ul class="list-unstyled">
@@ -299,34 +148,24 @@
               </li>
             </ul>
           </section>
-
+  
           <section class="col-lg-3 col-md-6">
             <h6 class="text-uppercase font-weight-bold mb-4">Newsletter</h6>
-            <p class="text-muted mb-4">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. At
-              itaque temporibus.
-            </p>
+            <p class="text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At itaque temporibus.</p>
             <div class="p-1 rounded border">
               <div class="input-group">
-                <input
-                  type="email"
-                  placeholder="Enter your email address"
-                  aria-describedby="button-addon1"
-                  class="form-control border-0 shadow-0"
-                />
+                <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">
                 <div class="input-group-append">
-                  <button
-                    type="submit"
-                    class="button btn-medium btn-semi-transparent"
-                  >
-                    <i class="fa fa-paper-plane"></i>
-                  </button>
+                  <button type="submit" class="button btn-medium btn-semi-transparent"><i class="fa fa-paper-plane"></i></button>
                 </div>
               </div>
-            </div>
           </section>
         </div>
       </div>
     </footer>
+
+    <script src="datafetch.js"></script>
+    
   </body>
+
 </html>
